--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,35 @@
-@media (max-width: 768px){
-
 .container {
   display: flex;
   flex-direction: column;
   height: 100vh;
   gap: 10px;
 }  
-}
+
 body{
   background-color: aqua;
-  margin: 20;
-  padding: 0;
+
+
 }
 header, footer {
   background-color: pink;
   text-align: center;
   padding: 10px;
+  font-size: 2rem;
+  text-decoration: underline solid red;
+  border-radius: 90px;
 }
 
 .aside1, .aside2 {
   background-color: skyblue;
-  flex: 1;
   text-align: center;
+  border-radius: 60%;
+  color: white;
+  text-decoration: underline blue;
+  font-size: 1.5rem;
 }
 
 .content {
   background-color: rgb(219, 14, 14);
-  flex: 2;
   display: flex;
   justify-content: space-around;
   align-items: flex-end;  /* This will push columns to the bottom */
