--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ header, footer {
 .aside1, .aside2 {
   background-color: skyblue;
   text-align: center;
-  border-radius: 60%;
   color: white;
   text-decoration: underline blue;
   font-size: 1.5rem;
@@ -32,7 +31,7 @@ header, footer {
   background-color: rgb(219, 14, 14);
   display: flex;
   justify-content: space-around;
-  align-items: flex-end;  /* This will push columns to the bottom */
+  flex-direction: column;
   padding: 10px;
   gap: 10px;
 }
@@ -41,7 +40,6 @@ header, footer {
   background-color: rgb(31, 41, 178);
   color: white;
   font-weight: bold;
-  width: 100px;
   height: 100px;
   border-radius: 10px;
   display: flex;
