--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,68 @@ header, footer {
  
 }
 }
+
+/* /////////////////////////////////////////////// */
+
+
+@media screen and (min-width: 748px) {
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  margin-top: 15vh;
+}  
+
+body{
+  background-color: aqua;
+}
+header, footer {
+  background-color: pink;
+  text-align: center;
+  height: 10vh;
+  font-size: 2rem;
+  text-decoration: underline solid rgb(9, 99, 224);
+  border-radius: 10px;
+}
+.line2{
+  display: flex;
+  gap:20;
+  align-items: flex-start;
+  margin-left: 10vh;
+}
+.aside1{
+  background-color: skyblue;
+  text-align: center;
+  color: white;
+  text-decoration: underline blue;
+  font-size: 1.5rem;
+  width: 30vh;
+  height: 40vh;
+}
+
+.content {
+  background-color: rgb(219, 14, 14);
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  padding: 10px;
+  gap: 10px;
+  height: 40vh;
+  align-items: flex-end;
+  width: 80vh;
+
+}
+
+.column {
+  background-color: rgb(31, 41, 178);
+  color: white;
+  font-weight: bold;
+  height: 20vh;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  width: 18vh;
+  
+ 
+}
+}
