--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ header, footer {
   display: flex;
   gap:20;
   align-items: flex-start;
-  margin-left: 10vh;
+  justify-content: center;
 }
 .aside1{
   background-color: skyblue;
@@ -95,12 +95,11 @@ header, footer {
   background-color: rgb(219, 14, 14);
   display: flex;
   justify-content: space-around;
-  flex-direction: row;
+  flex-direction: column;
   padding: 10px;
   gap: 10px;
   height: 40vh;
-  align-items: flex-end;
-  width: 80vh;
+  width: 70vh;
 
 }
 
@@ -112,7 +111,7 @@ header, footer {
   border-radius: 10px;
   display: flex;
   justify-content: center;
-  width: 18vh;
+  width: 65vh;
   
  
 }
